Modify Pasteboard handling in OSExchangeData

BUG=599585

Review-Url: https://codereview.chromium.org/1947153003
Cr-Commit-Position: refs/heads/master@{#391894}

Former-commit-id: 6bdd9b835d5f6ef1ef209e301d02af2f0b12485e